# AlarmClock

./: .gitignore  LICENSE  README.md  alarmclock.h  config.cpp  config.h  home_assistant.cpp  lcd.cpp  main.cpp  menu_main.cpp  menu_settings.cpp  menus.h  page_clock.cpp  page_menu.cpp  sunriset.c  util.cpp
AlarmClock/: CMakeLists.txt  alarmclock.h  home_assistant.cpp  main.cpp  menu_main.cpp  menu_set_alarm.cpp  menu_settings.cpp  menus.h  page_clock.cpp  page_menu.cpp  status_bar.cpp  status_bar.h  util.cpp
AlarmClock/DSL/: CMakeLists.txt
Output/: cron_run_alarm_clock
Output/data/: alarmclock.conf.example
Output/resources/alarms/: Included Audio Credits.txt
STL Models/: Alarm Clock - Cord Retainer Plug.stl  Alarm Clock - Main Body.stl  Alarm Clock - Rear Panel.stl  Alarm Clock.3mf  README.md
